--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -23,6 +23,8 @@ jobs:
             region: "INS"
           - model: "SM-M215G"
             region: "INS"
+          - model: "SM-T976B"
+            region: "DBT"
 
     steps:
       - name: Checkout repo
